--- a/.env.production
+++ b/.env.production
@@ -26,4 +26,6 @@ NEXT_PUBLIC_RTMP_URL=rtmp://localhost/live
 
 NEXT_PUBLIC_BASE_URL=https://sharescreen.up.railway.app
 
-NEXT_PUBLIC_RTMP_TEXT=rtmp://rtmp-stream-server-production.up.railway.app/live
+//NEXT_PUBLIC_RTMP_TEXT=rtmp://rtmp-stream-server-production.up.railway.app/live
+
+NEXT_PUBLIC_RTMP_TEXT=rtmp://localhost/live
